tests/bad_programs/syntax_errors/if_while.notc
int main() {
    if (while) {
    } else {
    }
    
}
